# SYCL_Public

./: Build_DLL.bat  Build_DLL_Standalone.bat  Build_SO.sh  Build_Test.bat  Build_Test.sh  Build_Test2.bat  Build_VTune.bat  CMakeLists.txt  Hamiltonian-SYCL-Export.cpp  Hamiltonian-SYCL.h  Load SYCL DLL.ipynb  Load SYCL DLL.py  test.cpp  xmake.lua
load dll python/: Load SYCL DLL.ipynb
load dll python/not needed/: 2024-05-24 04-04-45.txt  2024-05-24 04-06-06.txt  2024-05-24 04-07-14.txt  2024-05-24 04-29-57.txt
